ingress-nginx-tester/test-webservice/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: test-webservice
  name: test-webservice
