ingress-nginx-tester/test-webservice/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-webservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: test-webservice
spec:
  ingressClassName: nginx
  rules:
  - host: <hostname>
    http:
      paths:
      - backend:
          service:
            name: test-webservice
            port:
              number: 80
        path: /
        pathType: Prefix
